# ms-ai-code-academy

./: .env.example  .gitignore  README.md  pyproject.toml
ms_ai_code_academy/ms_ai_document_intelligence/bounty_ledger/: bounty_ledger.py  custom_bounty_ledger.py  instructions.md  invoice.py
ms_ai_code_academy/ms_ai_document_intelligence/cantina_credits/: cantina_credits.py  instructions.md  tax_form.py
ms_ai_code_academy/ms_ai_vision/tatooine_scope/: tatooine_scope
ms_ai_code_academy/ms_azure_ml/sanitas_seer/: sanitas_seer_training.py
ms_ai_code_academy/ms_azure_ml/util/: azure_ml_client.py
ms_ai_code_academy/ms_responsible_ai_dashboard/: README.md
ms_ai_code_academy/ms_responsible_ai_dashboard/ethos_sentinel/: hospital_training.py  responsible_ai_dashboard.py
