[tool.poetry]
name = "ms-ai-code-academy"
version = "0.1.0"
description = "This repository includes code related to the completion of different Microsoft Applied Skills courses."
license = "Apache-2.0"
authors = ["Quentin Reul <Quentin.H.Reul@gmail.com>"]
readme = "README.md"
keywords = ["azure ai", "ai", "azure", "applied skills"]

[project.urls]
"Source Code" = "https://github.com/qhreul/ms-ai-code-academy"
"Bug Tracker" = "https://github.com/qhreul/ms-ai-code-academy/issues"

[tool.poetry.dependencies]
azure-ai-documentintelligence = "1.0.0b3"
azure-ai-generative = "1.0.0b8"
azure-ai-resources = "1.0.0b8"
azure-core = "^1.30"
fructose="0.0.13"
python = "^3.11"
python-dotenv = "^1"
requests = "^2"

[tool.poetry.group.test.dependencies]
coverage = "*"
mock = "*"
parameterized = "*"
pytest = "^7"
pytest-mock = "*"

[tool.coverage.run]
omit = [
    "tests/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
